apps/production/home/home-assistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassist-dashboard
  namespace: home
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.home-assist.home.frandberg.live`)
      kind: Rule
      services:
        - name: homeassist
          port: 80
    - match: Host(`home-assist.home.frandberg.live`)
      kind: Rule
      services:
        - name: homeassist
          port: 80
  # tls:
  #   secretName: ns-longhorn-home-frandberg-live-staging-tls
